# ChangeLog for app-doc/dox
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-doc/cvs-repo/gentoo-x86/app-doc/dox/Attic/ChangeLog,v 1.12 2007/11/06 12:30:06 caleb Exp $

  06 Nov 2007; Caleb Tennis <caleb@gentoo.org> dox-1.1.ebuild:
  Fix qt3 linkage per bug #195127

  02 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org> dox-1.1.ebuild:
  Fix dependencies; bug 151226

  25 Jul 2005; Caleb Tennis <caleb@gentoo.org> dox-1.1.ebuild:
  Change qt dep per bug #100235

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  04 Sep 2004; Bryan Østergaard <kloeri@gentoo.org> dox-1.1.ebuild:
  Close bug 44034, patch by robertc96@hotmail.com.

  16 Aug 2004; Daniel Black <dragonheart@gentoo.org> dox-1.1.ebuild:
  Dependancy changed - the great net-www move - Thanks to Manfred Knick
  <Manfred.Knick@T-Online.de> bug #60539

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  dox-1.1.ebuild:
  QA - IUSE fix

  15 May 2003; Patrick Kursawe <phosphan@gentoo.org> dox-1.1.ebuild:
  Corrected homepage (bug 21055)

*dox-1.1 (21 Jun 2002)

  21 Jun 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.