@@ -1,4 +1,4 @@
 DIST dox-1.1.tar.gz 1353014 RMD160 f24191a47ff2a6fd588d3ea429fbe600e871fd19 SHA1 1c138cee60b913d95bc6753c1e70609f3a60ba81 SHA256 382a93068a36206b8cf95c886144af983703286f4721c4acfc1470fed4b3991a
-EBUILD dox-1.1.ebuild 1628 RMD160 8a44c71f7199e94fb2f020f684c5cc67893d335a SHA1 ed52b704825f3a6d6583980809c1b0cdb470441e SHA256 ffe5eb91f9adaf113b92c38fd3be846d9462e154ad0147628f3b994adc039c2c
-MISC ChangeLog 1577 RMD160 79f1ed114f4191fa53bfef6427b17b568999f67e SHA1 56584900fac2133d5828164ca9efc17151f2070f SHA256 87f84c4ca03278eacc9919f47545d3a451c5b51b6d77e6f4ef0d88d52de6b2aa
+EBUILD dox-1.1.ebuild 1630 RMD160 dcdee6ea3e8765bbc905de3698744a2d049ba9ee SHA1 71b8174ab6588a54d2a2590042c55b895547afd2 SHA256 6142dca827b1a6b5a3d41233ef803944df0b44be84ee963e3ac835f4d72e2eff
+MISC ChangeLog 1689 RMD160 c206cb01a6c39fcfa7b93a6557bbb31bc4c77e25 SHA1 764ae0c8d07e45b7b805296885bfabd5b29719a8 SHA256 7e07a2e47cc7b7ab40ac244cc4ffd45961453fc43c39779edc6b614dd6cade9a
 MISC metadata.xml 314 RMD160 25181cde297628576a9545bea3a76601485bfaf3 SHA1 ac16b621acf5a22b64859e3323d466fb556fc4c8 SHA256 736baab77aea9c4da199c01e3cd6877c271bd02357ff9b41b537a2232c6e96d7
