@@ -1,6 +1,9 @@
 # ChangeLog for app-doc/dox
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-doc/cvs-repo/gentoo-x86/app-doc/dox/Attic/ChangeLog,v 1.12 2007/11/06 12:30:06 caleb Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-doc/cvs-repo/gentoo-x86/app-doc/dox/Attic/ChangeLog,v 1.13 2008/07/27 19:21:20 carlo Exp $
+
+  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> dox-1.1.ebuild:
+  QA: Get rid of deprecated qt_min_version().
 
   06 Nov 2007; Caleb Tennis <caleb@gentoo.org> dox-1.1.ebuild:
   Fix qt3 linkage per bug #195127
